@@ -21,17 +21,16 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import java.util.Optional;
 import java.util.stream.Collectors;
 
 import javax.inject.Inject;
 
 import org.eclipse.xtext.EcoreUtil2;
 
+import com.regnosys.rosetta.RosettaEcoreUtil;
 import com.regnosys.rosetta.rosetta.RosettaCardinality;
 import com.regnosys.rosetta.rosetta.RosettaEnumeration;
 import com.regnosys.rosetta.rosetta.RosettaFactory;
-import com.regnosys.rosetta.rosetta.RosettaMetaType;
 import com.regnosys.rosetta.rosetta.RosettaReport;
 import com.regnosys.rosetta.rosetta.RosettaRule;
 import com.regnosys.rosetta.rosetta.expression.ExpressionFactory;
@@ -46,7 +45,6 @@ import com.regnosys.rosetta.rosetta.simple.ShortcutDeclaration;
 import com.regnosys.rosetta.rosetta.simple.SimpleFactory;
 import com.regnosys.rosetta.utils.ExternalAnnotationUtil;
 import com.regnosys.rosetta.utils.ModelIdProvider;
-import com.regnosys.rosetta.utils.PositiveIntegerInterval;
 
 public class RObjectFactory {
 	@Inject
@@ -59,6 +57,8 @@ public class RObjectFactory {
 	private ModelIdProvider modelIdProvider;
 	@Inject
 	private ExternalAnnotationUtil externalAnnotationUtil;
+	@Inject
+	private RosettaEcoreUtil ecoreUtil;
 
 	public RFunction buildRFunction(Function function) {
 		return new RFunction(
@@ -73,10 +73,9 @@ public class RObjectFactory {
 				function.getAnnotations());
 	}
 	
-	// TODO: should be private
-	public RAttribute createArtificialAttribute(String name, RType type, boolean isMulti) {
-		RMetaAnnotatedType rAnnotatedType = new RMetaAnnotatedType(type, List.of());
-		return new RAttribute(name, null, Collections.emptyList(), rAnnotatedType, isMulti ? PositiveIntegerInterval.boundedLeft(0) : PositiveIntegerInterval.bounded(0, 1), null, null);
+	private RAttribute createArtificialAttribute(String name, RType type, boolean isMulti) {
+		RMetaAnnotatedType rAnnotatedType = RMetaAnnotatedType.withEmptyMeta(type);
+		return new RAttribute(false, name, null, Collections.emptyList(), rAnnotatedType, isMulti ? RCardinality.UNBOUNDED : RCardinality.OPTIONAL, null, null, this);
 	}
 	public RFunction buildRFunction(RosettaRule rule) {		
 		RType inputRType = typeSystem.typeCallToRType(rule.getInput());
@@ -137,7 +136,7 @@ public class RObjectFactory {
 	}
 	
 	private List<ROperation> generateReportOperations(RDataType reportDataType, Map<RAttribute, RosettaRule> attributeToRuleMap, Attribute inputAttribute, List<RAttribute> assignPath) {
-		Collection<RAttribute> attributes = reportDataType.getAllNonOverridenAttributes();
+		Collection<RAttribute> attributes = reportDataType.getAllAttributes();
 		List<ROperation> operations = new ArrayList<>();
 		
 		for (RAttribute attribute : attributes) {
@@ -171,17 +170,37 @@ public class RObjectFactory {
 		
 		return new ROperation(ROperationType.SET, pathHead, pathTail, symbolRef);
 	}
-	
-	public RAttribute buildRAttribute(Attribute attribute) {
-		RMetaAnnotatedType rAnnotatedType = typeProvider.getRTypeOfSymbol(attribute);
-		boolean isMeta =  attribute.getTypeCall().getType() instanceof RosettaMetaType;
-		PositiveIntegerInterval card = new PositiveIntegerInterval(
-				attribute.getCard().getInf(),
-				attribute.getCard().isUnbounded() ? Optional.empty() : Optional.of(attribute.getCard().getSup()));
-		RosettaRuleReference ruleRef = attribute.getRuleReference();
 
-		return new RAttribute(attribute.getName(), attribute.getDefinition(), attribute.getReferences(), rAnnotatedType,
-				card, isMeta, ruleRef != null ? ruleRef.getReportingRule() : null, attribute);
+	public RAttribute buildRAttribute(Attribute attr) {
+		RMetaAnnotatedType rAnnotatedType = typeProvider.getRTypeOfFeature(attr, null);
+		RCardinality card = buildRCardinality(attr.getCard());
+		RosettaRuleReference ruleRef = attr.getRuleReference();
+
+		return new RAttribute(attr.isOverride(), attr.getName(), attr.getDefinition(), attr.getReferences(), rAnnotatedType,
+				card, ruleRef != null ? ruleRef.getReportingRule() : null, attr, this);
+	}
+	public RAttribute buildRAttributeOfParent(Attribute attr) {
+		Attribute parent = ecoreUtil.getParentAttribute(attr);
+		if (parent == null) {
+			return null;
+		}
+		return buildRAttribute(parent);
+	}
+	public RCardinality buildRCardinality(RosettaCardinality card) {
+		if (card.isUnbounded()) {
+			if (card.getInf() == 0) {
+				return RCardinality.UNBOUNDED;
+			}
+			return RCardinality.unbounded(card.getInf());
+		}
+		if (card.getSup() == 1) {
+			if (card.getInf() == 1) {
+				return RCardinality.SINGLE;
+			} else if (card.getInf() == 0) {
+				return RCardinality.OPTIONAL;
+			}
+		}
+		return RCardinality.bounded(card.getInf(), card.getSup());
 	}
 
 	public RShortcut buildRShortcut(ShortcutDeclaration shortcut) {
@@ -206,11 +225,7 @@ public class RObjectFactory {
 	}
 
 	public RDataType buildRDataType(Data data) {
-		return new RDataType(data, modelIdProvider, this);
-	}
-	// TODO: remove this hack
-	public RDataType buildRDataType(Data data, List<RAttribute> additionalAttributes) {
-		return new RDataType(data, modelIdProvider, this, additionalAttributes);
+		return new RDataType(data, modelIdProvider, this, typeProvider);
 	}
 	public RChoiceType buildRChoiceType(Choice choice) {
 		return new RChoiceType(choice, modelIdProvider, typeProvider, this);
